# hpc-cookbook

skeleton-program/src/: CMakeLists.txt  SkeletonForIpu.cpp  cpu.cpp  host.cpp
